# mini2048_terauchi

./: README.md
src/cpp/learning/: NT2_tuple_list_mode1.txt  NT3_tuple_list_mode1.txt  NT4_tuple_list_mode1.txt  NT5_tuple_list_mode1.txt  NT6_tuple_list_mode1.txt  NT7_tuple_list_mode1.txt  compile_all.sh  run_all.sh
src/cpp/learning/NT/: CMakeLists.txt
src/cpp/learning/NT/head/: 1tuples_sym.h  2tuples_sym.h  3tuples_sym.h  4tuples_sym.h  5tuples_sym.h  6tuples_sym.h  7tuples_sym.h  8tuples_sym.h  9tuples_sym.h  Game2048_3_3.h  common_defines.h  learning_common.h  nt_selector.h  perfect_play.cpp  perfect_play.h  play_table.h  save.h
src/cpp/learning/NT/learning/: CMakeCache.txt  Makefile  NT1_learning_ntuple  NT1_learning_ntuple_egreedy  NT1_learning_ntuple_ucb2  cmake_install.cmake  learning_ntuple.cpp  learning_ntuple_PP.cpp  learning_ntuple_egreedy.cpp  learning_ntuple_origne.cpp  learning_ntuple_ucb2.cpp  play_greedy.cpp
src/cpp/learning/NT/play/: a.out
src/cpp/learning/NT1/learning/: NT1_learning_ntuple  NT1_learning_ntuple_ucb2  NT1_play_greedy
src/cpp/learning/NT2/learning/: NT2_learning_ntuple  NT2_learning_ntuple_egreedy  NT2_learning_ntuple_ucb2  NT2_play_greedy
src/cpp/learning/NT3/learning/: NT3_learning_ntuple  NT3_learning_ntuple_egreedy  NT3_learning_ntuple_ucb2  NT3_play_greedy
src/cpp/learning/NT4/learning/: NT4_learning_ntuple  NT4_learning_ntuple_egreedy  NT4_learning_ntuple_ucb2  NT4_play_greedy  run_NT4.sh
src/cpp/learning/NT5/learning/: NT5_learning_ntuple  NT5_learning_ntuple_egreedy  NT5_learning_ntuple_ucb2  NT5_play_greedy
(+16 files in other folders)
